feat(entity): introducing entity advanced search api

--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
   jackson:
     default-property-inclusion: non_null
     property-naming-strategy: SNAKE_CASE
+    mapper:
+      accept-case-insensitive-enums: true
   jpa:
     show-sql: false
     properties:
