ci: cancel in-progress jobs in specific groups

--- a/.github/workflows/snapshot-publish.yml
+++ b/.github/workflows/snapshot-publish.yml
@@ -11,6 +11,9 @@ jobs:
   build:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    concurrency:
+      group: snapshot
+      cancel-in-progress: true
     permissions:
       contents: read
       packages: write
