Feat: Use a distributed semaphore to rate-limit tenant workflows based on tenant levels

--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -148,6 +148,16 @@ camel:
           - "python"
           - "mvel"
 
+workflow:
+  rate-limit:
+    enabled: true
+    timeout: 3000
+    tenant-concurrency:
+      free: 5
+      vip1: 10
+      vip2: 20
+      vip3: 30
+
 websocket:
   enabled: true
   port: ${WEBSOCKET_PORT:9201}
