--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -153,7 +153,7 @@ workflow:
     enabled: true
     timeout: 3000
     tenant-concurrency:
-      free: 5
+      default: 5
 
 websocket:
   enabled: true
