Feat: Introduce @DistributedSemaphore annotation to control method execution rate in Spring beans

--- a/extension-components/cluster/pom.xml
+++ b/extension-components/cluster/pom.xml
@@ -74,5 +74,10 @@
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>user-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
