--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -150,7 +150,7 @@ camel:
 
 workflow:
   rate-limit:
-    enabled: true
+    enabled: false
     timeout: 3000
     tenant-concurrency:
       default: 5
