feat: use a distributed semaphore to rate-limit tenant workflows based on tenant levels (#301)
* Feat: Use a distributed semaphore to rate-limit tenant workflows based on tenant levels

* Remove tenant-concurrency setting for vip levels

* Refactor: Move semaphore component to the cluster module

* Change free level to default level

* Acquire the semaphore only when the workflow is root

* Fix: Reset RedisSemaphore permits on application restart

* Feat: Introduce @DistributedSemaphore annotation to control method execution rate in Spring beans

* Modify: Set 'workflow.rateLimit.enabled' to false by default

--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -148,6 +148,13 @@ camel:
           - "python"
           - "mvel"
 
+workflow:
+  rate-limit:
+    enabled: false
+    timeout: 3000
+    tenant-concurrency:
+      default: 5
+
 websocket:
   enabled: true
   port: ${WEBSOCKET_PORT:9201}
