--- a/services/workflow/workflow-manager/pom.xml
+++ b/services/workflow/workflow-manager/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>message-pub-sub-component</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>cluster</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
