Modify: Optimize the validation methods related to numbers

--- a/core/base/pom.xml
+++ b/core/base/pom.xml
@@ -104,6 +104,10 @@
             <groupId>net.javacrumbs.shedlock</groupId>
             <artifactId>shedlock-spring</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
