Fix task settings

--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -87,13 +87,13 @@ task:
       default:
         core-size: 16
         max-size: 32
-        queue-size: 256
+        queue-capacity: 256
       mqtt:
         max-size: 32
       mqtt-subscriber:
         core-size: 32
         max-size: 64
-        rejectedPolicy: block_policy
+        rejected-policy: block_policy
 
 management:
   endpoints:
