--- a/application/application-standard/src/test/resources/application.yml
+++ b/application/application-standard/src/test/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 9200
 
 spring:
+  output:
+    ansi:
+      enabled: ALWAYS
   main:
     allow-bean-definition-overriding: true
   liquibase:
@@ -195,6 +198,16 @@ mqtt:
       rest_api_endpoint: http://${mqtt.broker.host:localhost}:18083
       rest_api_username: "admin"
       rest_api_password: "3CA92E5F-30AB-41F5-B3E6-8D7E213BE97E"
+
+resource:
+  storage: ${RESOURCE_STORAGE:db}
+  pre_sign_expire: 15m
+  s3:
+    endpoint: ${RESOURCE_STORAGE_S3_ENDPOINT:} # starts with http / https
+    region: ${RESOURCE_STORAGE_S3_REGION:}
+    access_key: ${RESOURCE_STORAGE_S3_ACCESS_KEY:}
+    access_secret: ${RESOURCE_STORAGE_S3_ACCESS_SECRET:}
+    bucket: ${RESOURCE_STORAGE_S3_BUCKET:}
 
 logging:
   level:
