Move test code related to MergedResourceBundleMessageSource to the context module

--- a/core/context/pom.xml
+++ b/core/context/pom.xml
@@ -47,6 +47,13 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- test -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>base</artifactId>
