--- a/application/application-standard/pom.xml
+++ b/application/application-standard/pom.xml
@@ -175,6 +175,11 @@
             <artifactId>resource-service</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>blueprint-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
