--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -216,6 +216,16 @@ resource:
     access_secret: ${RESOURCE_STORAGE_S3_ACCESS_SECRET:}
     bucket: ${RESOURCE_STORAGE_S3_BUCKET:}
 
+application:
+  version: ${beaver-iot.version}
+
+blueprint:
+  repository:
+    default_address:
+      home: https://github.com/pandalxb/beaver-iot-blueprint.git
+      branch: main
+    sync_frequency: 20s
+
 logging:
   level:
     com.milesight.beaveriot: ${LOGGING_LEVEL_BEAVER_IOT:info}
