feat(blueprint): introducing blueprint parser and deployer

--- a/services/workflow/workflow-manager/pom.xml
+++ b/services/workflow/workflow-manager/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>cluster</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>blueprint-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
