Feat: Introduce Resource Fingerprint to provide the capability of detecting whether resources have changed.

--- a/core/base/pom.xml
+++ b/core/base/pom.xml
@@ -116,6 +116,10 @@
             <groupId>com.alibaba</groupId>
             <artifactId>transmittable-thread-local</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
