--- a/services/dashboard/dashboard-service/pom.xml
+++ b/services/dashboard/dashboard-service/pom.xml
@@ -86,6 +86,11 @@
         </dependency>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>canvas-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
             <artifactId>permission-api</artifactId>
             <version>${project.version}</version>
         </dependency>
