--- a/services/device/device-service/pom.xml
+++ b/services/device/device-service/pom.xml
@@ -77,6 +77,11 @@
         </dependency>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>canvas-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
             <artifactId>context</artifactId>
             <version>${project.version}</version>
         </dependency>
