New feature: The entity template supports i18n.

--- a/services/entity-template/entity-template-service/src/main/resources/entity-template.yml
+++ b/services/entity-template/entity-template-service/src/main/resources/entity-template.yml
@@ -21,5 +21,6 @@ entity-template:
       type: property              # entity type
       access_mod: R
       attributes:
-        Online: 'Online'
-        Offline: 'Offline'
+        enum:
+          Online: ${ fn.i18n('entity-template-service.entity.status.online') }
+          Offline: ${ fn.i18n('entity-template-service.entity.status.offline') }
