--- a/services/blueprint/blueprint-service/pom.xml
+++ b/services/blueprint/blueprint-service/pom.xml
@@ -43,6 +43,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>blueprint-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
             <version>2.4</version>
