--- a/services/entity-template/entity-template-service/pom.xml
+++ b/services/entity-template/entity-template-service/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>device-service</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>resource-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
