--- a/services/entity-template/entity-template-service/src/main/resources/entity-template.yml
+++ b/services/entity-template/entity-template-service/src/main/resources/entity-template.yml
@@ -1,26 +1,26 @@
 entity-template:
   initial-entity-templates:
-    - identifier: 'location'      # entity template identifier
-      name: 'Location'            # entity template name
-      value_type: object          # entity value type
-      type: property              # entity type
-      access_mod: RW
-      children:
-        - identifier: 'address'
-          name: 'Address'
-          value_type: string
-        - identifier: 'longitude'
-          name: 'Longitude'
-          value_type: double
-        - identifier: 'latitude'
-          name: 'Latitude'
-          value_type: double
-    - identifier: 'status'        # entity template identifier
-      name: 'Status'              # entity template name
-      value_type: string          # entity value type
-      type: property              # entity type
+    - identifier: 'status'
+      name: ${ fn.i18n('entity-template-service.entity.status.name') }
+      value_type: string
+      type: property
       access_mod: R
       attributes:
         enum:
-          Online: ${ fn.i18n('entity-template-service.entity.status.online') }
-          Offline: ${ fn.i18n('entity-template-service.entity.status.offline') }
+          Online: ${ fn.i18n('entity-template-service.entity.status.attributes.enum.online') }
+          Offline: ${ fn.i18n('entity-template-service.entity.status.attributes.enum.offline') }
+    - identifier: 'location'
+      name: ${ fn.i18n('entity-template-service.entity.location.name') }
+      value_type: object
+      type: property
+      access_mod: RW
+      children:
+        - identifier: 'address'
+          name: ${ fn.i18n('entity-template-service.entity.address.name') }
+          value_type: string
+        - identifier: 'longitude'
+          name: ${ fn.i18n('entity-template-service.entity.longitude.name') }
+          value_type: double
+        - identifier: 'latitude'
+          name: ${ fn.i18n('entity-template-service.entity.latitude.name') }
+          value_type: double
