Change `important` flag type from boolean to integer in entity template

--- a/services/device-template/device-template-service/src/main/resources/template/default_device_template.yaml
+++ b/services/device-template/device-template-service/src/main/resources/template/default_device_template.yaml
@@ -50,7 +50,7 @@ initial_entities:
     access_mod: R
     attributes:
       unit: '℃'
-    important: true
+    important: 1
   - identifier: 'humidity'     # entity identifier
     name: 'humidity'           # entity name
     value_type: double         # entity value type
