--- a/services/device/device-service/pom.xml
+++ b/services/device/device-service/pom.xml
@@ -109,6 +109,11 @@
             <version>${graalvm.version}</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>blueprint-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
