refactor: dashboard canvas (#354)
* refactor: dashboard canvas

* feat: delete canvas when a device is deleted

* fix: add back empty permission class

* refactor: move websocket component

* fix: return entity value timestamp

* fix: return canvas id and update dashbaord description

--- a/services/dashboard/dashboard-service/pom.xml
+++ b/services/dashboard/dashboard-service/pom.xml
@@ -86,6 +86,11 @@
         </dependency>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>canvas-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
             <artifactId>permission-api</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -107,11 +112,6 @@
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>data-jpa</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.milesight.beaveriot</groupId>
-            <artifactId>mqtt-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
