Refactor: Associate device template with blueprint library version

--- a/services/device-template/device-template-api/pom.xml
+++ b/services/device-template/device-template-api/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>context</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>blueprint-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
