--- a/services/device-template/device-template-service/pom.xml
+++ b/services/device-template/device-template-service/pom.xml
@@ -82,7 +82,7 @@
         </dependency>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
-            <artifactId>blueprint-service</artifactId>
+            <artifactId>blueprint-api</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
