--- a/services/canvas/canvas-service/pom.xml
+++ b/services/canvas/canvas-service/pom.xml
@@ -73,6 +73,11 @@
         </dependency>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>device-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
             <artifactId>permission-api</artifactId>
             <version>${project.version}</version>
         </dependency>
