Refactor: Optimize version management for the blueprint library

--- a/services/blueprint/blueprint-service/pom.xml
+++ b/services/blueprint/blueprint-service/pom.xml
@@ -91,6 +91,11 @@
             <artifactId>resource-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>user-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
