Add the common entities field in device search api

--- a/services/device/device-service/pom.xml
+++ b/services/device/device-service/pom.xml
@@ -119,6 +119,11 @@
             <artifactId>blueprint-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>entity-template-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
